--- a/lernapp/src/main/resources/application.properties
+++ b/lernapp/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=lernapp
 spring.data.mongodb.uri=mongodb+srv://luisangermeier:WldNToFSIQ8QUtYW@cluster0.jckv3.mongodb.net/Lernapp?retryWrites=true&w=majority
+upload.dir=/data/Storage
